fixed the align middle

--- a/style.css
+++ b/style.css
@@ -7,12 +7,22 @@
   font-family: 'Poppins', sans-serif;
 }
 body{
-  display: flex;
+  /* display: block; */
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  vertical-align: middle;
+  max-width: max-content;
+  max-height: max-content;
+  margin: auto;
   padding: 0 10px;
-  min-height: 100vh;
-  align-items: center;
   background: #000000;
-  justify-content: center;
+}
+.logo {
+  width: 45px;
+
 }
 /* .wrapper{
   height: 383px;
